--- a/css/qgis2web.css
+++ b/css/qgis2web.css
@@ -1,6 +1,6 @@
 
         #map {
-            background-color: #ffffff
+            background-color: #fefefe
         }
         html, body, #map {
 			overflow: hidden;
